# web3

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .sqlfluff  .yamllint  README.md  pyproject.toml
.github/workflows/: lint.yaml  lint_python.yaml  lint_sql.yaml
eth-vm/: README copy.md
eth-vm/opensea/: config.yaml
eth-vm/ricochet/: ricochet_collection.py  ricochet_modelling.py  toolkit.py
eth-vm/stake_dao/: config.yaml
eth-vm/zerion/: README.md
ethereum/: config.yaml  data_collection.py  data_modelling.py
ethereum/aave/: config.yaml
ethereum/ricochet/: README.md  config.yaml
evm-compatible/: README copy.md  README.md  data_collection.py  data_modelling.py
evm-compatible/aave/: config.yaml
evm-compatible/opensea/: config.yaml
evm-compatible/ricochet/: config.yaml  ricochet_collection.py  toolkit.py
evm-compatible/stake_dao/: README.md
projects/solana-first-app/: Makefile  README.md  docker-compose.yml  package-lock.json  package.json
projects/solana-first-app/public/: index.html
projects/solana-first-app/src/: App.css  App.js
projects/solana-gif-portal/: README.md
projects/solana-gif-portal/gif-portal-react/: package-lock.json
projects/solana-gif-portal/gif-portal-react/public/: index.html
projects/solana-gif-portal/gif-portal-react/src/: App.css  App.js  createKeyPair.js  idl.json  keypair.json
projects/solana-gif-portal/gif-portal-rust/: Anchor.toml  package-lock.json
solana-network/solana-staking/: staking_extraction.py
solana/solana-staking/: README.md  staking_extraction.py
(+17 files in other folders)
