[tool.poetry]
name = "web3"
version = "0.1.0"
description = "A package containing different web3 utils."
authors = ["Quentin Gaborit <gibboneto@gmail.com>"]
license = "Proprietary"
packages = [
    { include = "eth-vm", from = "lib" },
]

[tool.poetry.dependencies]
python = "3.8,<3.11"
requests = "^2.27.1"
pandas = "^1.3.0"
python-dotenv = "^0.19.2"
boto3 = "^1.21.22"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
dbt-core = "^1.0.4"
dbt-redshift = "^1.0.0"
pytest = "^7.1.1"
black = "^22.3.0"
flake8 = "^4.0.1"
pytest-mock = "^3.7.0"
pytest-cov = "^3.0.0"
coverage = {extras = ["toml"], version = "^6.3.2"}
flake8-black = "^0.3.2"
flake8-import-order = "^0.18.1"
flake8-bugbear = "^22.3.23"
flake8-bandit = "^3.0.0"
flake8-annotations = "^2.8.0"
flake8-docstrings = "^1.6.0"
pre-commit = "^2.18.1"
sqlfluff = "^0.11.2"
sqlfluff-templater-dbt = "^0.11.2"
darglint = "^1.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
